unpackaged/main/default/objects/pw_ccpro__CountryObject__c/pw_ccpro__CountryObject__c.object-meta.xml
<CustomObject>
    <description>A list of standard countries used by AddressTools for both auto-completion at the UI level and validation/standardization at the database level.</description>
    <label>Country</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>