unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/Country_Definition__c.field-meta.xml
<CustomField>
    <fullName>Country_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Definition</label>
    <referenceTo>Country_Definition__c</referenceTo>
    <relationshipLabel>Countries</relationshipLabel>
    <relationshipName>Countries</relationshipName>
    <type>Lookup</type>
</CustomField>