unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__Continent__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__Continent__c</fullName>
    <label>Continent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>