unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__IsoCode_2__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__IsoCode_2__c</fullName>
    <externalId>true</externalId>
    <label>ISO 3166-2 Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>