unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__IsoCode_3__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__IsoCode_3__c</fullName>
    <label>ISO 3166-3 Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>