unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__IsStateMandatory__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__IsStateMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to “Yes” then NULL value of State is not Allowed for this Country</description>
    <label>State is Mandatory</label>
    <type>Checkbox</type>
</CustomField>