unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__NativeCountryName__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__NativeCountryName__c</fullName>
    <description>Native Country Name in local characters</description>
    <label>Native Country Name</label>
    <length>96</length>
    <type>Text</type>
</CustomField>