unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__NativeCountryNameLatin__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__NativeCountryNameLatin__c</fullName>
    <description>Native Country Name in latin characters</description>
    <label>Native Country Name (Latin)</label>
    <length>96</length>
    <type>Text</type>
</CustomField>