unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__PhoneCode__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__PhoneCode__c</fullName>
    <label>Phone Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>