unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__TimeZone__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__TimeZone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Time Zone for countries which span only a single Time Zone</inlineHelpText>
    <label>Time Zone</label>
    <referenceTo>pw_ccpro__TimeZone__c</referenceTo>
    <relationshipLabel>Countries</relationshipLabel>
    <relationshipName>Countries</relationshipName>
    <type>Lookup</type>
</CustomField>