unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__TrimmedName__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__TrimmedName__c</fullName>
    <description>Takes the first 80 characters of the country name which ensures the right length for inserting into standard country fields. Last spaces should be trimmed</description>
    <formula>TRIM ( LEFT( Name, 80 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trimmed Name</label>
    <type>Text</type>
</CustomField>