unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__UseStateCode__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__UseStateCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to “Yes” then when the user selects “United States” and “Ohio” then we store [State].[IsoCode] “OH” in the State field.
If value is “No” then we store the [State].[Name] – “Ohio”</description>
    <inlineHelpText>When enabled the State field is completed with the state ISO Code value.  Otherwise the state Name value is used.</inlineHelpText>
    <label>Use Subcountry Code in State field</label>
    <type>Checkbox</type>
</CustomField>