unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__ValidateZipCode__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__ValidateZipCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate ZIP Code</label>
    <type>Checkbox</type>
</CustomField>