unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__ZipCodeFailMessage__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__ZipCodeFailMessage__c</fullName>
    <label>ZIP Code pattern fail message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>