unpackaged/main/default/objects/pw_ccpro__CountryObject__c/fields/pw_ccpro__ZipCodeRegExp__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__ZipCodeRegExp__c</fullName>
    <label>ZIP Code Regular Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>