unpackaged/main/default/objects/pw_ccpro__CountryObject__c/listViews/pw_ccpro__All.listView-meta.xml
<ListView>
    <fullName>pw_ccpro__All</fullName>
    <columns>NAME</columns>
    <columns>pw_ccpro__Enabled__c</columns>
    <columns>pw_ccpro__AllowOnlyListedStates__c</columns>
    <columns>pw_ccpro__IsStateMandatory__c</columns>
    <columns>pw_ccpro__ValidateZipCode__c</columns>
    <columns>pw_ccpro__ZipCodeFailMessage__c</columns>
    <columns>pw_ccpro__ZipCodeRegExp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>